--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-animatable": "^1.4.0",
+    "react-native-paper": "^5.11.4",
     "react-native-picker-select": "^9.0.0",
     "react-native-vector-icons": "^10.0.3"
   },
